--- a/src/estilos/CardPlatillo.css
+++ b/src/estilos/CardPlatillo.css
@@ -5,7 +5,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
     background-color: white;
-    
+    display: flex;
   }
   .product-card:hover {
     transform: translateY(-5px);
